kubernetes/argocd/middleware.yaml
---
kind: Middleware
apiVersion: traefik.io/v1alpha1
metadata:
  name: argocd
  namespace: argocd
  labels:
    app.kubernetes.io/instance: "authelia"
    app.kubernetes.io/name: "authelia"
spec:
  forwardAuth:
    address: 'http://authelia.authelia.svc.cluster.local:9091/api/authz/forward-auth'
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Groups"
      - "Remote-Name"
      - "Remote-Email"
