kubernetes/argocd/patch.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocd-server
  namespace: argocd
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        args:
        - /usr/local/bin/argocd-server
        - --insecure
